所有文章加上摘要，剩下图片、目录、缩略图处理

--- a/source/_posts/12015-06-26-196.md
+++ b/source/_posts/12015-06-26-196.md
@@ -9,7 +9,7 @@ tags:
 ---
 
 一直以来都想开发一些自己用的小工具，一反面看看自己的能力怎么样，算是对自己技术能力的一种考验和锻炼，另一方面，算是解决一些其他工具解决不了的个人化需求，算是两全其美。
-
+<!-- more -->
 # 引子：MovieRecorder
 MovieRecorder是我开发的最早的小工具，历史算的上悠久了。大二的时候，刚开始有电脑，寝室的2M网络8个人共用，简直卡的不行。我经常去网吧拷点电影回来看，结果好几次拷回来的都是以前看过的，挺郁闷的，后来就用txt记录了看过哪些电影，渐渐地养成了习惯，工具也从txt变成了onenote。后来，在13年上半年刚学习完Java，有一段时间没什么事情，就用Swing和Sqlite开发了一个工具，就是MovieRecorder，之后一发不可收拾的开发了记录美剧观看进度的工具，代码保存器等小工具。
 
