--- a/source/_posts/2014-03-29-82.md
+++ b/source/_posts/2014-03-29-82.md
@@ -10,6 +10,7 @@ date: 2014-03-29 11:30:15
 ---
 
 在网上看到一个《Java经典算法40题》，准备没事就写一篇，其中部分题目可能有点小问题，比如19、38。 
+<!-- more -->
 【程序1】题目：
 古典问题：有一对兔子，从出生后第3个月起每个月都生一对兔子，小兔子长到第四个月后每个月又生一对兔子，假如兔子都不死，问每个月的兔子总数为多少？
 【程序2】题目：
