--- a/source/_posts/2014-03-29-87.md
+++ b/source/_posts/2014-03-29-87.md
@@ -11,7 +11,7 @@ date: 2014-03-29 11:34:26
 
 【程序1】题目：
 古典问题：有一对兔子，从出生后第3个月起每个月都生一对兔子，小兔子长到第四个月后每个月又生一对兔子，假如兔子都不死，问每个月的兔子总数为多少？
-
+<!-- more -->
 思路：很显然是一个递归的问题，计算兔子的数量：1 1 2 3 5 8 13，得出规律：函数出口是月份小于3，其他的就是上个月的兔子数量+上上一个月兔子的数量。
 ```java
 package org.sixlab.algorithm40;
