--- a/source/_posts/2014-04-04-98.md
+++ b/source/_posts/2014-04-04-98.md
@@ -11,7 +11,7 @@ date: 2014-04-04 12:00:44
 
 【程序4】题目：
 将一个正整数分解质因数。例如：输入90,打印出90=2\*3\*3*5。
-
+<!-- more -->
 思路：对于一个数字num，从2到num/2+1逐个判断当前数字是否是质数、且当前数字能否被num整除，如果条件都满足，则此数字就是一个质因数，则num=num/i，然后在从i到num/2+1继续判断，直到结束。
 ```java
 package org.sixlab.algorithm40;
