--- a/source/_posts/2015-03-21-122.md
+++ b/source/_posts/2015-03-21-122.md
@@ -10,7 +10,7 @@ date: 2015-03-21 08:23:02
 ---
 
 本教程不是详细的JavaFx入门教程，不讲解JavaFx的前世今生，不讲解JavaFx优缺点，不讲解JavaFx具体控件的用法，有一定Java基础的人看完本教程可以拿着API手册写JavaFx程序了。废话不多说，上干货。 在JavaFx中：
-
+<!-- more -->
 *   每个窗口是一个舞台（Stage）【这句话应该不完全正确，不过基本可以这样理解】；
 *   舞台必需有场景（Scene）；
 *   场景中可以有各种控件（Control）、形状（Shape）等等。
