--- a/source/_posts/2015-03-21-127.md
+++ b/source/_posts/2015-03-21-127.md
@@ -10,7 +10,7 @@ date: 2015-03-21 09:59:43
 ---
 
 本教程第二部分，讲解一下FXML的使用，本节稍微有点复杂，示例代码也会附上。 代码结构图：
-
+<!-- more -->
 {% img lightImg postImg lightCenter /images/2015-03-21-127/2015120414354675.png 300 javafx目录结构 %}
 
  代码中：
