--- a/source/_posts/2015-04-17-191.md
+++ b/source/_posts/2015-04-17-191.md
@@ -10,7 +10,7 @@ date: 2015-04-17 08:31:06
 ---
 
 自从前段时间接触到JavaFx之后，就喜欢上了JavaFx，因为一直以来需要都在写一些GUI的程序供自己使用，但是Swing之流设计界面太复杂，看着也巨丑，PyQt只有用Eric的时候才比较方便，其他时候不会用，而且自己的Python水平也实在不咋地。JavaFx发展时间较短，而且一直以来Java在GUI上不怎么被人重视，所以JavaFx有很多功能只能靠自己搜索和摸索了。
-
+<!-- more -->
 ### 1、JavaFx弹出模态窗口
 
 这个一直以来都觉得好麻烦，后来研究 [controlsfx-samples](http://fxexperience.com/controlsfx/) 的源代码才发现，原来只要给弹出的窗口的Stage加上`stage.initModality(Modality.APPLICATION_MODAL)`就可以实现模态化了。
