--- a/source/_posts/2016-01-05-393.md
+++ b/source/_posts/2016-01-05-393.md
@@ -12,7 +12,7 @@ date: 2016-01-05 22:50:55
 ---
 
 总感觉用上模块化，js代码才显得高大上一点，可是目前还脱离不了jQuery的简洁简单，于是想着一起使用jQuery和Sea.js，但是改造了多次，在Sea.js下仍然征服不了jQuery，很是苦恼。 看网上说的有两种方法可以使jQuery在Sea.js中乖乖听话。
-
+<!-- more -->
 ### 方法一的两种方式：
 ```js
 //方式一：
