--- a/source/_posts/2016-01-15-434.md
+++ b/source/_posts/2016-01-15-434.md
@@ -10,7 +10,7 @@ tags:
 
 我与Python的缘分
 ===========
-
+<!-- more -->
 今天晚上没事，看了一篇Django的入门介绍，跟着文章内容，竟然随手搭建出来了，而且理解起来竟然不很难，想想当初第一次看《Django Book》时候的情景，真是感慨万千啊。
 
 最初接触Python是在大二左右，当前只是感觉这个语言很厉害，简单了看了下。但是经常挂科的我心思自然不在学习上，所以没有深入学习。
