--- a/source/_posts/2016-03-06-441.md
+++ b/source/_posts/2016-03-06-441.md
@@ -11,7 +11,7 @@ date: 2016-03-06 13:37:48
 ---
 
 之前JavaFx的对话框和弹出框都是使用[ControlsFX](http://fxexperience.com/controlsfx/)，前段时间看到了一篇文章([JavaFX Dialogs (official)](http://code.makery.ch/blog/javafx-dialogs-official/))，介绍了JavaFX 8u40里新添加了对话框和弹出框。试了JavaFx官方的Dialogs和Alerts，简直不能太爽啊，还不用引第三方的库。
-
+<!-- more -->
 注意：需要java的版本要高于8u40 本文基本上算是[JavaFX Dialogs (official)](http://code.makery.ch/blog/javafx-dialogs-official/)文章的翻译了。
 
 基本对话框
