--- a/source/_posts/2016-11-20-578.md
+++ b/source/_posts/2016-11-20-578.md
@@ -10,7 +10,7 @@ tags:
 
 一、简介
 ----
-
+<!-- more -->
 Flex布局意为弹性布局。任何容器可以指定为Flex布局，则其子元素自动成为容器成员，称为Flex Item(Flex项目)，且子元素的float clear vertical-align属性失效。
 ```css
         .box{ 
