--- a/source/_posts/2017-03-14-607.md
+++ b/source/_posts/2017-03-14-607.md
@@ -9,6 +9,7 @@ tags:
 ---
 
 一、开发工具 Intellij IDEA IDEA 中的两个 Weex 插件
+<!-- more -->
 二、安装环境 
 1. 安装 node.js，官网下载，一步到底安装。
 2. 使用 npm 安装 weex-toolkit，在 shell 输入下面的命令：  
