--- a/source/_posts/2017-03-15-667.md
+++ b/source/_posts/2017-03-15-667.md
@@ -6,10 +6,12 @@ categories:
   - 万卷书
 date: 2017-03-15 05:25:42
 tags:
+toc: true
+tocMore: true
+tocNumber: true
 ---
 
-已完成的书：
-
+### 已完成的书
 *   白垩纪往事『刘慈欣(kindle 山西春秋电子音像出版社) 』 - 2016年11月27日
 *   我看到的世界和你们不一样『眭澔平(kindle 中国广播电视出版社)』 \- 2016年12月05日
 *   银河系漫游指南『道格拉斯·亚当斯(kindle 中国广播电视出版社)』 - 2017年03月14日
@@ -23,7 +25,7 @@ tags:
 *   你一生的故事『特德·姜(译林出版社)』 \- 2017年07月15日
 *   最仙游『虾写(追书神器)』 \- 2017年08月07日
 
-之前已读过的书
+### 之前已读过的书
 
 *   如何创作科幻小说与奇幻小说『【美】奥森·斯科特·卡德(2015 东陆生)』
 *   你一定爱读的极简欧洲史：为什么欧洲对现代文明的影响这么深『约翰·赫斯特(John Hirst 2011 席玉苹)』
@@ -34,7 +36,7 @@ tags:
 *   围城
 *   钢铁是怎样炼成的
 
-以前读过的网络小说
+### 以前读过的网络小说
 
 *   斗破苍穹
 *   重生之贼行天下
