--- a/source/_posts/2017-04-07-636.md
+++ b/source/_posts/2017-04-07-636.md
@@ -10,7 +10,7 @@ tocnum: false
 ---
 
 使用以下命令之前，请先安装 Node.js，直接去官网下载安装即可：[https://nodejs.org/](https://nodejs.org/)
-
+<!-- more -->
 一、使用 create-react-app 初始化 React 项目
 ----------------------------------
 
