--- a/source/_posts/2017-04-18-643.md
+++ b/source/_posts/2017-04-18-643.md
@@ -9,7 +9,7 @@ tags:
 ---
 
 由于 Mysql5.7支持 Json 格式字段，为了试验新功能，准备把我的阿里云服务器上的 Mysql 数据库升级一下，查了一下数据库版本，我勒个去，是5.5版本的，网上一搜教程，全是5.6升级5.7的，只能看着这些教程踩踩坑了。
-
+<!-- more -->
 1.备份 MySQL 数据
 -------------
 
