--- a/source/_posts/2017-06-26-696.md
+++ b/source/_posts/2017-06-26-696.md
@@ -10,7 +10,7 @@ date: 2017-06-26 01:37:21
 ---
 
 教程：[http://blog.csdn.net/forezp/article/details/69696915](http://blog.csdn.net/forezp/article/details/69696915)   eureka是一个服务注册和发现模块，每一个 Eureka Server 也是一个 Eureka Client，至少要指定一个 Server。   一、新建 Eureka 服务注册中心模块步骤
-
+<!-- more -->
 1.  可以使用 IDEA 的 Spring Initializr 更加方便的创建 Eureka 模块。新建 Eureka 模块可选择 Cloud Discovery 下的 Eureka Server。
 2.  在Application 类加上 @EnableEurekaServer 注解。
 3.  在配置文件中添加配置，eureka.client.registerWithEureka：false和fetchRegistry：false来表明自己是一个eureka server。
