--- a/source/_posts/2017-06-26-698.md
+++ b/source/_posts/2017-06-26-698.md
@@ -10,7 +10,7 @@ date: 2017-06-26 22:30:13
 ---
 
 教程：[http://blog.csdn.net/forezp/article/details/69788938](http://blog.csdn.net/forezp/article/details/69788938) Spring Cloud 有两种服务调用方式：
-
+<!-- more -->
 1.  ribbon+restTemplate，ribbon 是一种负载均衡客户端
 2.  feign，默认集成了 ribbon
 
