--- a/source/_posts/2017-06-27-700.md
+++ b/source/_posts/2017-06-27-700.md
@@ -10,7 +10,7 @@ date: 2017-06-27 23:56:14
 ---
 
 教程：[http://blog.csdn.net/forezp/article/details/69808079](http://blog.csdn.net/forezp/article/details/69808079)  
-
+<!-- more -->
 一、创建 Feign 服务模块
 ---------------
 
