--- a/source/_posts/2017-06-29-702.md
+++ b/source/_posts/2017-06-29-702.md
@@ -10,7 +10,7 @@ date: 2017-06-29 00:29:30
 ---
 
 教程：[http://blog.csdn.net/forezp/article/details/69934399](http://blog.csdn.net/forezp/article/details/69934399)   为了解决某个服务阻塞，导致故障传递并造成服务器瘫痪。
-
+<!-- more -->
 一、Ribbon 中使用断路器
 ---------------
 
