--- a/source/_posts/2017-06-29-714.md
+++ b/source/_posts/2017-06-29-714.md
@@ -10,7 +10,7 @@ date: 2017-06-29 01:17:37
 ---
 
 教程：[http://blog.csdn.net/forezp/article/details/69939114](http://blog.csdn.net/forezp/article/details/69939114)
-
+<!-- more -->
 一、创建 Zuul 路由模块
 --------------
 
