--- a/source/_posts/2017-06-30-716.md
+++ b/source/_posts/2017-06-30-716.md
@@ -12,7 +12,7 @@ date: 2017-06-30 04:46:10
 教程：[http://blog.csdn.net/forezp/article/details/70037291](http://blog.csdn.net/forezp/article/details/70037291)
 
 目的：为了统一管理大量的服务，并做到实时更新。可放到内存中，可放到 Git 中。
-
+<!-- more -->
 有两个角色：config server，config client
 
 一、 创建 Config Server 模块
