--- a/source/_posts/2017-06-30-724.md
+++ b/source/_posts/2017-06-30-724.md
@@ -12,7 +12,7 @@ date: 2017-06-30 04:46:31
 教程：[http://blog.csdn.net/forezp/article/details/70037513](http://blog.csdn.net/forezp/article/details/70037513)
 
 服务实例多的时候，可以将配置中心做成微服务，集群部署
-
+<!-- more -->
 一、创建 配置中心 Eureka 注册中心模块
 -----------------------
 
