--- a/source/_posts/2017-07-01-742.md
+++ b/source/_posts/2017-07-01-742.md
@@ -12,7 +12,7 @@ date: 2017-07-01 04:46:32
 教程：[http://blog.csdn.net/forezp/article/details/70148235](http://blog.csdn.net/forezp/article/details/70148235)
 
 Spring cloud bus通过轻量消息代理连接各个分布的节点。本例使用 RabbitMq，使用前需要先弄好 RabbitMq。
-
+<!-- more -->
 一、改造 Config Client 模块
 ---------------------
 
