--- a/source/_posts/2017-07-02-744.md
+++ b/source/_posts/2017-07-02-744.md
@@ -12,7 +12,7 @@ date: 2017-07-02 04:46:32
 教程：[http://blog.csdn.net/forezp/article/details/70162074](http://blog.csdn.net/forezp/article/details/70162074)
 
 Spring Cloud Sleuth 继承了服务链路追踪组件 Zipkin。
-
+<!-- more -->
 一、创建 Zipkin Server 模块
 ---------------------
 
