--- a/source/_posts/2017-07-03-746.md
+++ b/source/_posts/2017-07-03-746.md
@@ -16,7 +16,7 @@ date: 2017-07-03 04:46:38
 [http://blog.csdn.net/forezp/article/details/70233227](http://blog.csdn.net/forezp/article/details/70233227)
 
 Hystrix Dashboard 是断路器的一个组件，提供了数据监控和友好的图形化界面。
-
+<!-- more -->
 Hystrix Turbine 可以聚合多个 Hystrix Dashboard 的数据。
 
 一、改造 service01 模块
