--- a/source/_posts/2017-07-15-670.md
+++ b/source/_posts/2017-07-15-670.md
@@ -10,7 +10,7 @@ tags:
 
 阅读完成时间：2017年7月15日
 阅读方式：Kindle Oasis
-
+<!-- more -->
 最早知道特德·姜 这个人，是在《三体》获得雨果奖的时候，印象不是很深，只知道华裔背景、很多奖。去年改编自《你一生的故事》的电影《降临》上映，观看之后我很好奇电影中的画面在小说中是如何描述的，所以买了Kindle后，将这本书安排进了我要读的书单中，结果看完之后，还是有些失望的，我不知道换一个更好的翻译，能不能让我读起来更流畅，
 
 内容简介：[豆瓣链接](https://book.douban.com/subject/26295448/)
