--- a/source/_posts/2017-09-23-767.md
+++ b/source/_posts/2017-09-23-767.md
@@ -10,7 +10,7 @@ tags:
 
 阅读完成时间：2017年9月23日
 阅读方式：Kindle Oasis
-
+<!-- more -->
 故事情节环环相扣，描述了几个人分别查的案子，最终几个案子都是有关联的，而且背后还有个大案子，可惜为了六部曲，估计看大案子只能等第六部了，目前书完成了前四部，正在看第二部。
 
 五部应该分别讲述了五个阶层：士、商、兵、工、农
