--- a/source/_posts/2017-10-07-773.md
+++ b/source/_posts/2017-10-07-773.md
@@ -10,7 +10,7 @@ tags:
 
 阅读完成时间：2017年10月7日
 阅读方式：Kindle Oasis
-
+<!-- more -->
 **有轻微剧透，千万不要去豆瓣看书评，刚开始看的时候，在豆瓣看到了一个短评，后来看书一看到相关的人，我就想到那条短评，就不好奇他们为什么会这样了。**
 
 第二部的故事基本和第一步没什么关系，只在极其少的地方捎带提了一下。
