--- a/source/_posts/2017-10-25-828.md
+++ b/source/_posts/2017-10-25-828.md
@@ -13,7 +13,7 @@ date: 2017-10-25 12:48:30
 1.  经过研究，这个插件将 Markdown 格式放到了`post_content_filtered`字段，将 Markdown 转为 HTML 格式后仍放到原来的`post_content`字段。
 2.  编辑器内代码样式和页面上代码样式应该无关，因为使用插件后，页面代码还是按照原来的样式显示的。
 3.  旧的文章打开的时候直接按 HTML 格式打开的，因为 Markdown 支持 HTML
-
+<!-- more -->
 测试是否支持 GFM 任务列表（需要在设置中开启）
 =========================
 
