--- a/source/_posts/2018-05-16-idea.md
+++ b/source/_posts/2018-05-16-idea.md
@@ -16,6 +16,7 @@ other: #$year-$month_mm-$day_dd $fullhour:$minute:$second
 # 为了更好用
 
 ### 代码补全不区分大小写
+<!-- more -->
 {% img lightImg postImg lightCenter /images/2018-05-16-idea/20180511152752.png 400 %}
 
 ### 粘贴代码时自动格式化
