--- a/source/_posts/2018-06-06-gitlab.md
+++ b/source/_posts/2018-06-06-gitlab.md
@@ -14,7 +14,7 @@ tocnum: false
 最近需要在服务器上安装了 Gitlab，记录一下过程，防止下次继续踩坑。
 
 注意：官网的教程的是 gitlab-ee 版本（企业版），需要安装的是 gitlab-ce（社区版）
-
+<!-- more -->
 一、安装并配置必要的依赖关系
 ===============
 
