--- a/source/_posts/2018-06-07-gogs.md
+++ b/source/_posts/2018-06-07-gogs.md
@@ -13,7 +13,7 @@ comments: true
 ---
 
 最近需要在服务器上安装了 Git 服务器，本来安装了Gitlab，但是太重了，还集成了Nginx Gem一堆东西，改个端口都特别麻烦还报502错误，所以换成了 Gogs，简单好用，记录一下过程，防止下次继续踩坑。
-
+<!-- more -->
 一、下载并配置
 ===============
 
