--- a/source/_posts/2018-08-15-principle1.md
+++ b/source/_posts/2018-08-15-principle1.md
@@ -14,6 +14,7 @@ comments: true
 SRP: Single responsibility principle
 There should never be more than one reason for a class to change.
 基本思想：高内聚，低耦合。
+<!-- more -->
 引起一个类变化的原因只有有一个。即每个类只能负责一个单独的职责，它应该仅仅关注自身自责的完成。
 
 # 二、举例说明
