--- a/source/_posts/2018-08-15-principle2.md
+++ b/source/_posts/2018-08-15-principle2.md
@@ -14,6 +14,7 @@ comments: true
 LSP: Liskov Substitution Principle.
 Functions that use pointers or references to base classes must be able to use objects of derived classes without knowing it.
 基本思想：在任意父类出现的地方，都可以直接使用子类来代替。
+<!-- more -->
 例：Father 类有方法 f1。为了拓展，实现了 Son 类，在 Son 类中添加方法 f2。那么 Son 应该尽量达到：即使覆写 f1 方法，覆写后的 f1 方法应该和 Father 类的 f1 的预期行为是一致的。这样的话，以前所有调用 Father 类 f1 方法的地方，都可以替换为对 Son 类 f1 方法的调用，而不会出现不一样的结果。
 
 # 二、举例说明
