--- a/source/_posts/2014-04-02-92.md
+++ b/source/_posts/2014-04-02-92.md
@@ -11,6 +11,7 @@ date: 2014-04-02 11:38:25
 
 【程序3】题目：
 打印出所有的 "水仙花数 "，所谓 "水仙花数 "是指一个三位数，其各位数字立方和等于该数本身。例如：153是一个 "水仙花数 "，因为153=1的三次方＋5的三次方＋3的三次方。
+<!-- more -->
 ```java
 package org.sixlab.algorithm40;
 
