--- a/source/_posts/2014-04-04-102.md
+++ b/source/_posts/2014-04-04-102.md
@@ -11,7 +11,7 @@ date: 2014-04-04 12:02:06
 
 【程序5】题目：
 利用条件运算符的嵌套来完成此题：学习成绩> =90分的同学用A表示，60-89分之间的用B表示，60分以下的用C表示。
-
+<!-- more -->
 思路：这也算算法？
 
 ```java
