--- a/source/_posts/2016-01-14-403.md
+++ b/source/_posts/2016-01-14-403.md
@@ -10,7 +10,7 @@ date: 2016-01-14 13:37:04
 ---
 
 six-site开发大计划： 使用各种技术重复造轮子，初期使用sqlite/Jquery/Sea.js/Semantic UI 搭配各种技术。
-
+<!-- more -->
 Java版： 使用Java开发的网站，基于Nutz/Freemarker/sqlite/Druid/Jquery/Sea.js/Semantic UI... [https://github.com/PatrickRoot/six-site](https://github.com/PatrickRoot/six-site)
 
 Python版： 使用Python开发的网站，基于Django/sqlite/Jquery/Sea.js/Semantic UI... [https://github.com/PatrickRoot/six\_site\_py](https://github.com/PatrickRoot/six_site_py)
