--- a/source/_posts/2016-11-14-571.md
+++ b/source/_posts/2016-11-14-571.md
@@ -9,7 +9,7 @@ tags:
 ---
 
 15年双11期间，趁着活动买了好多书，但是直到现在也只读了两三本小书，坚持读书并不是一件容易的事情。以后在博客上记录我的读书笔记，一来不浪费几百块钱买的阿里云服务器，二来让自己把读书这件事情坚持下去，三来记录下读书学到的东西和心得体会。一举三得。
-
+<!-- more -->
 下面列一下所有要读的书，已读的书，持续更新。
 
 正在读的书：
