--- a/source/_posts/2017-11-17-874.md
+++ b/source/_posts/2017-11-17-874.md
@@ -11,7 +11,7 @@ date: 2017-11-17 17:42:21
 ---
 
 最近需要在服务器上安装 MySQL、MongoDB、Redis 和 ELK 等，记录一下过程，防止下次继续踩坑。
-
+<!-- more -->
 一、下载 MySQL 安装包
 ==============
 
