--- a/source/_posts/2018-09-01-idea-tips.md
+++ b/source/_posts/2018-09-01-idea-tips.md
@@ -1,6 +1,6 @@
 ---
 title: Intellij IDEA 每日提示集锦-201809
-id: 2018-09-01-idea-tips
+id: 2018/09/01/idea-tips
 date: 2018-09-01 08:12:32
 categories:
   - 工具
