--- a/source/_posts/2018-09-01-idea-tips.md
+++ b/source/_posts/2018-09-01-idea-tips.md
@@ -62,3 +62,28 @@ To easily evaluate the value of any expression while debugging the program, sele
 
 在调试的时候，想要方便的获取一个表达式的运算结果，在编辑器中选中表达式代码（你可能想要按 option+↑ 几次来应用此次操作），然后按 Option + F8。
 
+# 2018-09-04
+
+{% image fancybox center clear 
+group:idea-tips /images/2018-09-01-idea-tips/2018-09-04.png
+/images/2018-09-01-idea-tips/2018-09-04.png 400px 200px 
+"2018-09-04" 
+%}
+
+To quickly evaluate the value of any expression while debugging the program, hold Alt and click this expression to see its value and calculate it, call a method, etc.
+
+在调试的时候，想要快速的获取一个表达式的运算结果，按住Alt并点击表达式，可以进行查看值、运行或者调用一个方法等。
+
+# 2018-09-05
+
+{% image fancybox center clear 
+group:idea-tips /images/2018-09-01-idea-tips/2018-09-05.png
+/images/2018-09-01-idea-tips/2018-09-05.png 400px 200px 
+"2018-09-05" 
+%}
+
+Use Basic Completion (⌃Space) for completing words in text and comments in files of many different types.
+All the words from the current file that start with the typed prefix will appear in the lookup list.
+
+使用基本的补全（Control+Space）来补全不同类型文件的文本和注释中的单词。所有当前文件中，以已输入内容作为开头的词，都会显示在待选列表中。
+
