--- a/source/_posts/2018-09-01-idea-tips.md
+++ b/source/_posts/2018-09-01-idea-tips.md
@@ -87,3 +87,28 @@ All the words from the current file that start with the typed prefix will appear
 
 使用基本的补全（Control+Space）来补全不同类型文件的文本和注释中的单词。所有当前文件中，以已输入内容作为开头的词，都会显示在待选列表中。
 
+# 2018-09-06
+
+{% image fancybox center clear 
+group:idea-tips /images/2018-09-01-idea-tips/2018-09-06.png
+/images/2018-09-01-idea-tips/2018-09-06.png 400px 200px 
+"2018-09-06" 
+%}
+
+The shortcuts such as F1 (View | Quick Documentation), ⌘P (View | Parameter Info), ⌘B (Navigate | Declaration) and others can be used not only in the editor but in the code completion popup list as well.
+
+有些快捷键不仅能在编辑器中使用，在代码不全弹出列表中也可以使用，例如：F1 (View | Quick Documentation), Command+P (View | Parameter Info), Command+B (Navigate | Declaration)。
+
+# 2018-09-07
+
+{% image fancybox center clear 
+group:idea-tips /images/2018-09-01-idea-tips/2018-09-071.png
+/images/2018-09-01-idea-tips/2018-09-071.png 400px 200px 
+"2018-09-07" 
+%}
+
+When using Code Completion, you can accept the currently highlighted selection in the popup list with the period character (.), comma (,), semicolon (;), space and other characters.
+The selected name is automatically entered in the editor followed by the entered character.
+
+使用代码补全时，你可以通过使用小数点、逗号、分号、空格和其他符号选中当前高亮的选项。选中的名字会自动输入到编辑器中已输入字符的后边。
+
