--- a/source/_posts/2016-11-14-571.md
+++ b/source/_posts/2016-11-14-571.md
@@ -6,6 +6,8 @@ categories:
   - 万卷书
 date: 2016-11-14 05:13:45
 tags:
+  - 万卷书
+  - 读书
 ---
 
 15年双11期间，趁着活动买了好多书，但是直到现在也只读了两三本小书，坚持读书并不是一件容易的事情。以后在博客上记录我的读书笔记，一来不浪费几百块钱买的阿里云服务器，二来让自己把读书这件事情坚持下去，三来记录下读书学到的东西和心得体会。一举三得。
@@ -50,3 +52,6 @@ tags:
 *   间客【第三卷西林的征途 第九十二章 帝国的红叶】
 *   庆余年【第六卷 殿前欢 第七十二章 我知道你去年夏天干了什么】
 *   全职法师【第133章 雷系，中阶！】
+
+
+[【读书】已完成阅读的书籍](https://blog.sixlab.cn/archives/667/)
