--- a/source/_posts/2016-11-14-575.md
+++ b/source/_posts/2016-11-14-575.md
@@ -3,6 +3,8 @@ title: 【读书】癌症·真相：医生也在读
 tags:
   - 实体书
   - 读过的书
+  - 万卷书
+  - 读书
 url: 575.html
 id: 575
 categories:
@@ -61,3 +63,7 @@ date: 2016-11-14 17:09:44
 *   病毒疗法，脊髓灰质炎病毒用于治疗脑瘤，此病毒是小儿麻痹症元凶
 *   去除脊髓灰质炎病毒关于病毒复制的基因，然后放入常见感冒病毒"鼻病毒"基因元件，得到一个正常细胞活性低，癌细胞中活性高的杂交病毒。
 *   病毒疗法的风险：个体有差异，剂量小无效，剂量大产生严重炎症导致死亡，治疗一次效果不好就基本说明无效，副作用未知，目前还未推广研究
+
+
+[【读书】读书笔记计划](https://blog.sixlab.cn/archives/571/)
+[【读书】已完成阅读的书籍](https://blog.sixlab.cn/archives/667/)
