--- a/source/_posts/2016-11-28-592.md
+++ b/source/_posts/2016-11-28-592.md
@@ -3,6 +3,8 @@ title: 【读书】白垩纪往事
 tags:
   - kindle
   - 读过的书
+  - 万卷书
+  - 读书
 url: 592.html
 id: 592
 categories:
@@ -16,3 +18,7 @@ date: 2016-11-28 02:02:42
 作者: 刘慈欣  
 
 简介：《白垩纪往事》，又名《当恐龙遇上蚂蚁》，如果就这么正常发展下去，恐龙和蚂蚁的社会大概都不可能继续进化了。这两个物种刚刚燃起的智慧之火将在时间的长河中渐渐熄灭，就如同在它们之前和之后的无数物种曾经有过的那样，只是地球历史的漫漫长夜中闪现的两点转瞬即逝的萤光。
+
+
+[【读书】读书笔记计划](https://blog.sixlab.cn/archives/571/)
+[【读书】已完成阅读的书籍](https://blog.sixlab.cn/archives/667/)
