--- a/source/_posts/2016-12-06-590.md
+++ b/source/_posts/2016-12-06-590.md
@@ -1,7 +1,10 @@
 ---
 title: 【读书】我看到的世界和你们不一样
 tags:
+  - kindle
   - 读过的书
+  - 万卷书
+  - 读书
 url: 590.html
 id: 590
 categories:
@@ -26,3 +29,7 @@ ISBN: 9787504367082
 感想：
 *   敞开心扉，谦虚学习，尊重他人，处处都是朋友。
 *   虽然看完书，对一些东西产生了一丝好奇，但是并不能激起我去旅行的兴趣。书中讲的大多也是去了哪里，见到了什么样的人和物，和当地人一起跳舞/唱歌/打渔...... 并没有太多深层的内容，就连亚马孙丛林中少数民族的残酷的成人礼，作者也只是为其即将消失感到遗憾，实在不敢苟同。
+
+
+[【读书】读书笔记计划](https://blog.sixlab.cn/archives/571/)
+[【读书】已完成阅读的书籍](https://blog.sixlab.cn/archives/667/)
