--- a/source/_posts/2017-03-15-611.md
+++ b/source/_posts/2017-03-15-611.md
@@ -6,6 +6,8 @@ tags:
   - 读过的书
   - 银河系搭车指南
   - 银河系漫游指南
+  - 万卷书
+  - 读书
 url: 611.html
 id: 611
 categories:
@@ -39,3 +41,7 @@ date: 2017-03-15 05:28:55
 四人驾着黄金之心朝传说的星球玛格里西亚出发，传说中，马格西亚是一个替富人兴建人造星球的星球，不过宇宙经济过度膨胀，引发全宇宙的经济破产，马格拉斯的生意亦因此一落千丈，从此成为传说。
 亚瑟·邓特在玛格里西亚上被告知，地球其实只是一个实验。原来许多百万年前，老鼠其实是一种超智慧生物，它们建造了一部超级电脑深思，它们问超级电脑，生命、宇宙以及任何事情的终极答案是什么，经过一段长时间的计算，深思告诉老鼠的后人答案是42，深思解释它只能计算出答案是什么，但答案的原因必须由另一部更高智能的电脑才能解释，而该部电脑就是地球。
 在计算出答案前的5分钟，地球却被沃贡人毁灭，地球的全部资料销毁，老鼠认为仅有的资料寄存在最后离开地球的亚瑟·邓特的脑中，于是决定向亚瑟·邓特开刀做手术……
+
+
+[【读书】读书笔记计划](https://blog.sixlab.cn/archives/571/)
+[【读书】已完成阅读的书籍](https://blog.sixlab.cn/archives/667/)
