--- a/source/_posts/2017-03-15-667.md
+++ b/source/_posts/2017-03-15-667.md
@@ -6,6 +6,8 @@ categories:
   - 万卷书
 date: 2017-03-15 05:25:42
 tags:
+  - 万卷书
+  - 读书
 toc: true
 tocMore: true
 tocNumber: true
@@ -24,6 +26,9 @@ tocNumber: true
 *   癌症·真相：医生也在读『菠萝(清华大学出版社)』 \- 2017年05月31日
 *   你一生的故事『特德·姜(译林出版社)』 \- 2017年07月15日
 *   最仙游『虾写(追书神器)』 \- 2017年08月07日
+*   清明上河图密码『冶文彪 (kindle 北京联合出版公司)』 \- 2017年9月23日
+*   清明上河图密码2『冶文彪 (kindle 北京联合出版公司)』 \- 2017年10月07日
+*   真武世界『蚕茧里的牛 (追书神器)』 \- 2019年04月20日
 
 ### 之前已读过的书
 
@@ -54,3 +59,6 @@ tocNumber: true
 *   不败战神
 *   我欲封天
 *   完美世界
+
+
+[【读书】读书笔记计划](https://blog.sixlab.cn/archives/571/)
