--- a/source/_posts/2017-03-27-615.md
+++ b/source/_posts/2017-03-27-615.md
@@ -6,6 +6,8 @@ tags:
   - 读过的书
   - 银河系搭车指南
   - 银河系漫游指南
+  - 万卷书
+  - 读书
 url: 615.html
 id: 615
 categories:
@@ -27,3 +29,7 @@ date: 2017-03-27 23:53:22
 5.《基本无害》 (Mostly Harmless)，1992年出版
 
 有理论声称，若是有谁真的搞清楚了宇宙为何存在、因何存在，宇宙就会立刻消失，取而代之的则是更怪异、更难以说明的东西。 另有理论声称，此事已经发生过了。 …… 一颗位于银河边陲、名叫“坂裘”的不起眼行星突然向整个银河系发动了灭绝袭击，原因只是由于它忽然发现了银河系的存在。在此之前，坂裘人始终以为他们孤独地生活在宇宙之中，因为这颗星球被重重尘埃星云包围。 坂裘军队是一帮白色机器人，所持武器在我们看来无比类似板球拍和板球。 为此，银河系的其他星球始终对地球敬而远之。 因为我们打板球。
+
+
+[【读书】读书笔记计划](https://blog.sixlab.cn/archives/571/)
+[【读书】已完成阅读的书籍](https://blog.sixlab.cn/archives/667/)
