--- a/source/_posts/2017-04-04-632.md
+++ b/source/_posts/2017-04-04-632.md
@@ -29,3 +29,7 @@ tags:
 海豚为什么全都消失了？  
 还有，上帝 给造物的最后留言究竟是什么？  
 这正是他想知道，但又不敢相信的答案。
+
+
+[【读书】读书笔记计划](https://blog.sixlab.cn/archives/571/)
+[【读书】已完成阅读的书籍](https://blog.sixlab.cn/archives/667/)
