--- a/source/_posts/2017-04-18-641.md
+++ b/source/_posts/2017-04-18-641.md
@@ -6,6 +6,13 @@ categories:
   - 万卷书
 date: 2017-04-18 00:40:52
 tags:
+  - kindle
+  - Kindle Oasis
+  - 读过的书
+  - 银河系搭车指南
+  - 银河系漫游指南
+  - 万卷书
+  - 读书
 ---
 
 阅读完成时间：2017年04月03日
@@ -27,3 +34,7 @@ tags:
 ……  
 亚瑟说，“地球到底还在不在呢？我花了那么久寻找地球，找到的星球都有点像但又不完全像。最糟的一个叫这他妈星，当地的坏脾气小动物还咬了我一口。当然了，有一半时候，地球根本不存在，因为已经被该死的沃贡人炸碎了。我说的你能听懂吗？”  
 福特没有回答。他在听别的什么东西。他把《指南》递给亚瑟，让亚瑟看屏幕。屏幕上的条目写着：“地球，基本无害。”
+
+
+[【读书】读书笔记计划](https://blog.sixlab.cn/archives/571/)
+[【读书】已完成阅读的书籍](https://blog.sixlab.cn/archives/667/)
