--- a/source/_posts/2017-04-24-646.md
+++ b/source/_posts/2017-04-24-646.md
@@ -6,6 +6,11 @@ categories:
   - 万卷书
 date: 2017-04-24 21:50:40
 tags:
+  - kindle
+  - Kindle Oasis
+  - 读过的书
+  - 万卷书
+  - 读书
 ---
 
 阅读完成时间：2017年04月24日
@@ -21,3 +26,7 @@ tags:
 1975年蒋介石逝世后，台湾局势骤然微妙；蒋经国于70年代末力排众议，强力发动台湾社会变革，直接推动了台湾的经济腾飞；接下来的几十年，李登辉、陈水扁、马英九等政治人物粉墨登场，台湾社会风起云涌，每一个最普通的台湾人，都卷入其中，日常生活发生了翻天覆地的变化；这30多年的社会巨变，也给我和我的家人，留下了许许多多令人难忘的欢笑与泪水。  
 本书从我出生的1977年写起，以一个台湾平民的视角，向您细述30多年来台湾社会的大事件和小故事，与您分享过去30年台湾老百姓最真实的日常生活和悲喜人生。  
 读完本书，您多半会感叹一声：这些年，原来大家都不容易！
+
+
+[【读书】读书笔记计划](https://blog.sixlab.cn/archives/571/)
+[【读书】已完成阅读的书籍](https://blog.sixlab.cn/archives/667/)
