--- a/source/_posts/2017-05-31-665.md
+++ b/source/_posts/2017-05-31-665.md
@@ -6,6 +6,10 @@ categories:
   - 万卷书
 date: 2017-05-31 17:17:59
 tags:
+  - 实体书
+  - 读过的书
+  - 万卷书
+  - 读书
 ---
 
 阅读完成时间：2017年5月31日
@@ -27,3 +31,7 @@ tags:
 ★微信圈阅读量累计近千万！
 ★有图有真相，每章首一幅可爱而有内涵的插画。
 ★中国科学院曾益新院士作序推荐！
+
+
+[【读书】读书笔记计划](https://blog.sixlab.cn/archives/571/)
+[【读书】已完成阅读的书籍](https://blog.sixlab.cn/archives/667/)
