--- a/source/_posts/2017-07-15-670.md
+++ b/source/_posts/2017-07-15-670.md
@@ -6,6 +6,11 @@ categories:
   - 万卷书
 date: 2017-07-15 22:01:38
 tags:
+  - kindle
+  - Kindle Oasis
+  - 读过的书
+  - 万卷书
+  - 读书
 ---
 
 阅读完成时间：2017年7月15日
@@ -28,3 +33,7 @@ tags:
 - 《七十二个字母》：在一个“名字驱动一切”的世界，命名师们玩转七十二个字母，寻找人类种族繁衍的密码。
 - 《人类科学之演变》：当人类的所有科学研究仅仅局限在解读后人类的科研成果时，这种研究是否还有存在的必要？
 - 《地狱是上帝不在的地方》：妻子在天使下凡时去世，丈夫却必须学习如何热爱上帝，以便死后与妻子团聚。
+
+
+[【读书】读书笔记计划](https://blog.sixlab.cn/archives/571/)
+[【读书】已完成阅读的书籍](https://blog.sixlab.cn/archives/667/)
