--- a/source/_posts/2017-10-07-773.md
+++ b/source/_posts/2017-10-07-773.md
@@ -6,9 +6,14 @@ categories:
   - 万卷书
 date: 2017-10-07 00:47:48
 tags:
+  - kindle
+  - Kindle Oasis
+  - 读过的书
+  - 万卷书
+  - 读书
 ---
 
-阅读完成时间：2017年10月7日
+阅读完成时间：2017年10月07日
 阅读方式：Kindle Oasis
 <!-- more -->
 **有轻微剧透，千万不要去豆瓣看书评，刚开始看的时候，在豆瓣看到了一个短评，后来看书一看到相关的人，我就想到那条短评，就不好奇他们为什么会这样了。**
@@ -24,3 +29,7 @@ tags:
 内容简介：[豆瓣链接](https://book.douban.com/subject/26576515/)
 
 全图824位人物，每个人都有名有姓，佯装、埋伏在舟船车轿、酒肆楼阁中。看似太平盛世，其实杀机四伏。翻开本书，在小贩的叫卖声中，金、辽、西夏、高丽等国的间谍、刺客已经潜伏入画，824个人物逐一复活，只待客船穿过虹桥，就一起拉开北宋帝国覆灭的序幕。 《清明上河图》描绘人物824位，牲畜60多匹，木船20多只……5米多长的画卷，画尽了汴河上下十里繁华，乃至整个北宋近两百年的文明与富饶。 然而，这幅歌颂太平盛世的传世名画，画完不久金兵就大举入侵，杀人焚城，汴京城内大火三日不熄，北宋繁华一夕扫尽。 这是北宋帝国的盛世绝影，在小贩的叫卖声中，金、辽、西夏、高丽等国的间谍和刺客已经潜伏入画，死亡的气息弥漫在汴河的波光云影中： 画面正中央，舟楫相连的汴河上，一艘看似普通的客船正要穿过虹桥，而由于来不及降下桅杆，船似乎就要撞上虹桥，船上手忙脚乱，岸边大呼小叫，一片混乱之中，贼影闪过，一阵烟雾袭来，待到烟雾散去， 客船上竟出现了二十四具尸体，所有人都目瞪口呆…… 翻开本书，一幅旷世奇局徐徐展开，错综复杂，丝丝入扣，824个人物逐一复活，为你讲述《清明上河图》中埋藏的帝国秘密。
+
+
+[【读书】读书笔记计划](https://blog.sixlab.cn/archives/571/)
+[【读书】已完成阅读的书籍](https://blog.sixlab.cn/archives/667/)
